--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -6,7 +6,7 @@
     android:background="@android:color/transparent">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="8dp"
         android:layout_gravity="center|bottom"
@@ -22,8 +22,9 @@
 
                 <TextView
                     android:id="@+id/textViewRecipeName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
                     android:text="Recipe Name"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold"/>
@@ -69,7 +70,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
+        android:backgroundTint="@color/button_color_over"
         android:src="@drawable/baseline_edit_document_24"
+        app:tint="@color/button_color_over_text"
         app:elevation="10dp"
         app:maxImageSize="32dp"
         android:scaleType="centerInside"
