--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.myRecipes.MyRecipesFragment">
 
@@ -12,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/component_background"
-        app:tabTextColor="@color/black"
+        app:tabTextColor="@color/text_color"
+        app:tabSelectedTextAppearance="@color/straw"
         >
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -25,6 +27,18 @@
             android:id="@+id/tabFavoriteRecipes"
             android:text="Moje Obľúbené" />
     </com.google.android.material.tabs.TabLayout>
+
+    <TextView
+        android:id="@+id/tvNoRecipesResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:text="@string/myRecipes_noRecipesResult"
+        android:background="@drawable/home_section_name"
+        android:textSize="24sp"
+        android:elevation="10dp"
+        android:visibility="gone"/>
 
     <!-- RecyclerView na zobrazenie receptov -->
     <androidx.recyclerview.widget.RecyclerView
@@ -47,7 +61,7 @@
         android:layout_margin="24dp"
         android:contentDescription="Pridaj recept"
         android:src="@drawable/icon_add"
-        app:backgroundTint="@color/salmon_pink"
-        app:tint="@android:color/white" />
+        app:backgroundTint="@color/button_color_over"
+        app:tint="@color/button_color_over_text" />
 
 </FrameLayout>
